Small css change

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -33,6 +33,7 @@
             padding: 30px 20px;
             border-radius: 10px;
             background-color: #EEE;
+            margin-bottom: 30px;
         }
         .inner-box:hover {
             background-color: #d4d4d4;
